Switching to unix sock PHP-FPM

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
 		}
 
 		location ~ \.php$ {
-			fastcgi_pass   127.0.0.1:9000;
+			fastcgi_pass   unix:/var/run/php-fpm.sock;
     			fastcgi_split_path_info ^(.+\.php)(/.+)$;
 			fastcgi_index  index.php;
 			include        fastcgi_params;
